--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   fluttertoast: ^8.2.1
   provider: ^6.0.5
+  shared_preferences: ^2.1.1
+
 
 
   # The following adds the Cupertino Icons font to your application.
