--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,14 +38,14 @@ dependencies:
   carousel_slider: ^4.2.1
   firebase_core: ^2.8.0
   firebase_auth: ^4.3.0
-  cloud_firestore: ^4.4.5
+  cloud_firestore: ^4.7.1
   firebase_storage: ^11.0.16
   google_sign_in: ^6.0.2
   flutter_secure_storage: ^8.0.0
   fluttertoast: ^8.2.1
   provider: ^6.0.5
   shared_preferences: ^2.1.1
-
+  path: ^1.8.2
 
 
   # The following adds the Cupertino Icons font to your application.
