--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,17 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: ^2.0.4
-  intl: ^0.17.0
-  flutter_spinbox: ^0.13.0
-  image_picker: ^0.8.7
-  flutter_facebook_auth: ^5.0.8
+  flutter_svg: ^2.0.5
+  intl: ^0.18.1
+  flutter_spinbox: ^0.13.1
+  image_picker: ^0.8.7+5
+  flutter_facebook_auth: ^5.0.11
   carousel_slider: ^4.2.1
-  firebase_core: ^2.8.0
-  firebase_auth: ^4.3.0
+  firebase_core: ^2.13.1
+  firebase_auth: ^4.6.2
   cloud_firestore: ^4.8.0
-  firebase_storage: ^11.0.16
-  google_sign_in: ^6.0.2
+  firebase_storage: ^11.2.2
+  google_sign_in: ^6.1.3
   flutter_secure_storage: ^8.0.0
   fluttertoast: ^8.2.1
   provider: ^6.0.5
